# backend

./: .example.env  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
api/: Dockerfile.dev  Dockerfile.prod  app.py
api/core/: database.py  dependencies.py  file_upload.py  security.py  settings.py  vk_oauth.py
api/core/db/: __init__.py  comment_crud.py  community_crud.py  post_crud.py  user_crud.py
api/core/models/: __init__.py  comment.py  community.py  like.py  post.py  skill.py  user.py
api/core/schemas/: __init__.py  auth.py  comment.py  community.py  post.py  skill.py  user.py
api/routes/: __init__.py  comment.py  community.py  post.py  user.py
ml/: Dockerfile.dev  Dockerfile.prod  server.py
ml/artifacts/: labels.json
tech_support/: Dockerfile.dev  Dockerfile.prod  main.py  to_env.py
